fix: added conditional for windows build directories

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,13 @@ jobs:
     - name: Build Release
       run: cargo build --release --verbose
     - name: Upload Artifact
-      if: matrix.build == ubuntu || matrix.build == macos
+      if: (${{ matrix.build }} -eq 'ubuntu') || (${{ matrix.build }} -eq 'macos')
       uses: actions/upload-artifact@v2.2.2
       with:
         name: rustybox-${{ matrix.build }}
         path: target/release/rustybox
     - name: Upload Artifact
-      if: matrix.build == win32 || matrix.build == win64
+      if: (${{ matrix.build }} -eq 'win32') || (${{ matrix.build }} -eq 'win64')
       uses: actions/upload-artifact@v2.2.2
       with:
         name: rustybox-${{ matrix.build }}
