--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,54 +46,107 @@ jobs:
     - name: Lint Check
       run: |
         cargo clippy --version
-        cargo clippy -p rustybox -- --verbose -D warnings
+        cargo clippy -- --verbose -D warnings
     - name: Test
       run: cargo test --verbose
     - name: Build Release
       run: cargo build --release --verbose
-    - name: Move Artifacts (ubuntu)
+    - name: Move Artifacts Client (ubuntu)
       if: ${{ matrix.build == 'ubuntu' }}
       run: |
-        cp target/release/rustybox rustybox
-        chmod +x rustybox
-        tar -cvzf rustybox-ubuntu.tar.gz rustybox assets
-    - name: Move Artifacts (macos)
+        cp target/release/rustyhack_client rustyhack_client
+        chmod +x rustyhack_client
+        tar -cvzf rustyhack_client-ubuntu.tar.gz rustyhack_client
+    - name: Move Artifacts Server (ubuntu)
+      if: ${{ matrix.build == 'ubuntu' }}
+      run: |
+        cp target/release/rustyhack_server rustyhack_server
+        chmod +x rustyhack_server
+        tar -cvzf rustyhack_server-ubuntu.tar.gz rustyhack_server assets
+    - name: Move Artifacts Client (macos)
       if: ${{ matrix.build == 'macos' }}
       run: |
-        cp target/release/rustybox rustybox
-        chmod +x rustybox
-        tar -cvzf rustybox-macos.tar.gz rustybox assets
-    - name: Move Artifacts (win32)
+        cp target/release/rustyhack_client rustyhack_client
+        chmod +x rustyhack_client
+        tar -cvzf rustyhack_client-macos.tar.gz rustyhack_client
+    - name: Move Artifacts Server (macos)
+      if: ${{ matrix.build == 'macos' }}
+      run: |
+        cp target/release/rustyhack_server rustyhack_server
+        chmod +x rustyhack_server
+        tar -cvzf rustyhack_server-macos.tar.gz rustyhack_server assets
+    - name: Move Artifacts Client (win32)
       if: ${{ matrix.build == 'win32' }}
-      run: copy target\release\rustybox.exe rustybox.exe
-    - name: Move Artifacts (win64)
+      run: copy target\release\rustyhack_client.exe rustyhack_client.exe
+    - name: Move Artifacts Client (win64)
       if: ${{ matrix.build == 'win64' }}
-      run: copy target\release\rustybox.exe rustybox.exe
-    - name: Upload Artifact (ubuntu)
+      run: copy target\release\rustyhack_client.exe rustyhack_client.exe
+    - name: Move Artifacts Server (win32)
+      if: ${{ matrix.build == 'win32' }}
+      run: copy target\release\rustyhack_server.exe rustyhack_server.exe
+    - name: Move Artifacts Server (win64)
+      if: ${{ matrix.build == 'win64' }}
+      run: copy target\release\rustyhack_server.exe rustyhack_server.exe
+    - name: Upload Artifact Client (ubuntu)
       if: ${{ matrix.build == 'ubuntu' }}
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: rustybox-${{ matrix.build }}
-        path: rustybox-ubuntu.tar.gz
-    - name: Upload Artifact (macos)
+        name: rustyhack_client-${{ matrix.build }}
+        path: rustyhack_client-ubuntu.tar.gz
+    - name: Upload Artifact Client (macos)
       if: ${{ matrix.build == 'macos' }}
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: rustybox-${{ matrix.build }}
-        path: rustybox-macos.tar.gz
-    - name: Upload Artifact (win32)
+        name: rustyhack_client-${{ matrix.build }}
+        path: rustyhack_client-macos.tar.gz
+    - name: Upload Artifact Client (win32)
       if: ${{ matrix.build == 'win32' }}
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: rustybox-${{ matrix.build }}
+        name: rustyhack_client-${{ matrix.build }}
         path: |
-          rustybox.exe
-          assets\**\*
-    - name: Upload Artifact (win64)
+          rustyhack_client.exe
+    - name: Upload Artifact Client (win64)
       if: ${{ matrix.build == 'win64' }}
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: rustybox-${{ matrix.build }}
+        name: rustyhack_client-${{ matrix.build }}
         path: |
-          rustybox.exe
+          rustyhack_client.exe
+    - name: Upload Artifact Server (ubuntu)
+      if: ${{ matrix.build == 'ubuntu' }}
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: rustyhack_server-${{ matrix.build }}
+        path: rustyhack_server-ubuntu.tar.gz
+    - name: Upload Artifact Server (macos)
+      if: ${{ matrix.build == 'macos' }}
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: rustyhack_server-${{ matrix.build }}
+        path: rustyhack_server-macos.tar.gz
+    - name: Upload Artifact Server (win32)
+      if: ${{ matrix.build == 'win32' }}
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: rustyhack_server-${{ matrix.build }}
+        path: |
+          rustyhack_server.exe
           assets\**\*
+    - name: Upload Artifact Server (win64)
+      if: ${{ matrix.build == 'win64' }}
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: rustyhack_server-${{ matrix.build }}
+        path: |
+          rustyhack_server.exe
+          assets\**\*
+
+  update_release_draft:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: release-drafter/release-drafter@v5
+        with:
+          config-name: release-drafter.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
