--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -146,5 +146,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
+        with:
+          config-name: "./github/release_drafter.yml"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
