--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,6 +147,6 @@ jobs:
     steps:
       - uses: release-drafter/release-drafter@v5
         with:
-          config-name: "./github/release_drafter.yml"
+          config-name: "release_drafter.yml"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
