--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -3,6 +3,8 @@ name = "rustyhack_client"
 version = "0.1.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2018"
+repository = "https://github.com/pbellchambers/rustyhack-mmo"
+license = "AGPL-3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
