--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -9,3 +9,4 @@ license = "AGPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = "1.0.123"
