--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -14,3 +14,6 @@ log = "0.4.14"
 simplelog = "0.9.0"
 console_engine = "1.4.2"
 laminar = "0.4.0"
+crossbeam-channel = "0.4.4"
+serde = "1.0.123"
+bincode = "1.3.1"
