--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -15,3 +15,6 @@ simplelog = "0.9.0"
 console_engine = "1.4.2"
 legion = "0.3.1"
 laminar = "0.4.0"
+crossbeam-channel = "0.4.4"
+serde = "1.0.123"
+bincode = "1.3.1"
