--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyhack_server"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2018"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
@@ -13,6 +13,7 @@ rustyhack_lib = { path = "../rustyhack_lib" }
 log = "0.4.14"
 simplelog = "0.9.0"
 console_engine = "1.4.2"
+crossterm = { version = "0.18.2", features = ["serde"] }
 legion = { version = "0.3.1", features = ["extended-tuple-impls"] }
 laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
