--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4.14"
 simplelog = "0.9.0"
 console_engine = "1.4.2"
 crossterm = { version = "0.18.2", features = ["serde"] }
-legion = { version = "0.3.1", features = ["extended-tuple-impls"] }
+legion = "0.3.1"
 laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
 serde = "1.0.123"
