chore: update release drafter template

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -16,7 +16,7 @@ categories:
     labels:
       - 'maintenance'
       - 'chore'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-template: '- $TITLE $BODY (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   minor:
