--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyhack_server"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2018"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
@@ -19,3 +19,4 @@ laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
 serde = "1.0.123"
 bincode = "1.3.1"
+rand = "0.8.3"
