--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -11,3 +11,4 @@ license = "AGPL-3.0"
 [dependencies]
 serde = "1.0.123"
 console_engine = "1.5.0"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
