--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -20,3 +20,4 @@ crossbeam-channel = "0.4.4"
 serde = "1.0.123"
 bincode = "1.3.1"
 rand = "0.8.3"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
