--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -16,6 +16,6 @@ console_engine = "1.5.0"
 crossterm = { version = "0.19.0", features = ["serde"] }
 laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
-serde = "1.0.123"
+serde = { version = "1.0.123", features = ["derive"] }
 bincode = "1.3.1"
 regex = "1.4.3"
