--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -9,6 +9,8 @@ license = "AGPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.123"
+log = "0.4.14"
+simplelog = "0.9.0"
+serde = { version = "1.0.123", features = ["derive"] }
 console_engine = "1.5.0"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
