--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -17,7 +17,8 @@ crossterm = { version = "0.19.0", features = ["serde"] }
 legion = "0.3.1"
 laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
-serde = "1.0.123"
+serde = { version = "1.0.123", features = ["derive"] }
+serde_json = "1.0.62"
 bincode = "1.3.1"
 rand = "0.8.3"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
