--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -19,3 +19,4 @@ crossbeam-channel = "0.4.4"
 serde = { version = "1.0.123", features = ["derive"] }
 bincode = "1.3.1"
 regex = "1.4.3"
+chrono = "0.4.19"
