--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -14,3 +14,5 @@ simplelog = "0.9.0"
 serde = { version = "1.0.123", features = ["derive"] }
 console_engine = "1.5.0"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
+strum = "0.20.0"
+strum_macros = "0.20.1"
