--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyhack_lib"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2018"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
@@ -9,5 +9,10 @@ license = "AGPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.123"
+log = "0.4.14"
+simplelog = "0.9.0"
+serde = { version = "1.0.123", features = ["derive"] }
 console_engine = "1.5.0"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
+strum = "0.20.0"
+strum_macros = "0.20.1"
