--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyhack_server"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2018"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
@@ -14,8 +14,11 @@ log = "0.4.14"
 simplelog = "0.9.0"
 console_engine = "1.5.0"
 crossterm = { version = "0.19.0", features = ["serde"] }
-legion = "0.3.1"
+legion = "0.4.0"
 laminar = "0.4.0"
 crossbeam-channel = "0.4.4"
-serde = "1.0.123"
+serde = { version = "1.0.123", features = ["derive"] }
+serde_json = "1.0.62"
 bincode = "1.3.1"
+rand = "0.8.3"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
