--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -10,9 +10,10 @@ license = "AGPL-3.0"
 
 [dependencies]
 log = "0.4.14"
-simplelog = "0.10.0"
-serde = { version = "1.0.125", features = ["derive"] }
-console_engine = "2.0.1"
+simplelog = "0.11.0"
+serde = { version = "1.0.130", features = ["derive"] }
+console_engine = "2.2.0"
+crossterm = { version = "0.22.1", features = ["serde"] }
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
-strum = "0.21.0"
-strum_macros = "0.21.1"
+strum = "0.23.0"
+strum_macros = "0.23.1"
