--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyhack_client"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2021"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
@@ -16,7 +16,8 @@ console_engine = "2.4.0"
 crossterm = { version = "0.23.2", features = ["serde"] }
 laminar = "0.5.0"
 crossbeam-channel = "0.5.5"
-serde = { version = "1.0.138", features = ["derive"] }
+serde = { version = "1.0.139", features = ["derive"] }
 bincode = "1.3.3"
 regex = "1.6.0"
 chrono = "0.4.19"
+itertools = "0.10.3"
