--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -20,6 +20,8 @@ simplelog = "0.12.0"
 serde = { version = "1.0.139", features = ["derive"] }
 console_engine = "2.4.0"
 crossterm = { version = "0.23.0", features = ["serde"] }
+laminar = "0.5.0"
+crossbeam-channel = "0.5.5"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 strum = "0.24.1"
 strum_macros = "0.24.2"
