feat: combat, stats, levelling, and inventory (#76)
* feat: basic skeleton groundwork for combat

* feat: gracefully logout without causing server errors

* fix: display correct monster name on look command

* feat: initial working combat systems

* fix: enable and fix clippy::cargo warnings

* refactor: simplify position and velocity into single struct

* refactor: make client naming convention distinct from server

* fix: crash when player enters top row

* refactor: first pass at clippy pedantic warnings for integer casts

* refactor: first pass at clippy pedantic warnings for client and lib

* refactor: first pass at clippy pedantic warnings for server

* refactor: second pass at clippy pedantic warnings

* refactor: third pass at clippy pedantic warnings

* refactor: resolve final clippy pedantic warnings

* feat: make player HP updates visible to player after combat

* feat: add uuid to player_details

* refactor: use f32 stats more accurate combat calculations

* fix: revert incorrect player str default

* refactor: split systems into separate modules

* feat: implement player death mechanics

* refactor: remove the need for player_position_updates resource

* chore: remove todo comments

* feat: implement monster deaths

* feat: implement sending combat system messages to players

* feat: implement sending combat system messages to players

* docs: update readme to reflect combat feature

* feat: implement monsters attacking players

* feat: implement monster respawn mechanics

* fix: skip combat checks if either attacker/defender already dead

* feat: implement health regen every second server tick

* feat: make player attacks only happen on server tick

* refactor: change look command to l key

* docs: clarify controls

* chore: clarify attack miss message

* refactor: move exp and lvl to stats

* feat: implement exp gain on killing enemy

* fix: only give exp on monster deaths, not pl

--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -1,19 +1,27 @@
 [package]
 name = "rustyhack_lib"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2021"
+homepage = "https://github.com/pbellchambers/rustyhack-mmo"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
 license = "AGPL-3.0"
+readme = "../README.md"
+description = "Shared libraries for Rustyhack MMO - An ASCII \"roguelike\" MMORPG"
+keywords = ["game", "games", "roguelike", "mmorpg", "ascii-art", "ascii-game", "console-game", "terminal-game", "terminal-based", "library"]
+categories = ["games"]
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4.17"
 simplelog = "0.12.0"
-serde = { version = "1.0.139", features = ["derive"] }
+serde = { version = "1.0.140", features = ["derive"] }
 console_engine = "2.4.0"
-crossterm = { version = "0.23.0", features = ["serde"] }
+crossterm = { version = "0.23.2", features = ["serde"] }
+laminar = "0.5.0"
+crossbeam-channel = "0.5.6"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 strum = "0.24.1"
 strum_macros = "0.24.2"
