--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "rustyhack_client"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2021"
+homepage = "https://github.com/pbellchambers/rustyhack-mmo"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
 license = "AGPL-3.0"
+readme = "../README.md"
+description = "Client for Rustyhack MMO - An ASCII \"roguelike\" MMORPG"
+keywords = ["game", "games", "roguelike", "mmorpg", "ascii-art", "ascii-game", "console-game", "terminal-game", "terminal-based", "client"]
+categories = ["games"]
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,8 +21,8 @@ simplelog = "0.12.0"
 console_engine = "2.4.0"
 crossterm = { version = "0.23.2", features = ["serde"] }
 laminar = "0.5.0"
-crossbeam-channel = "0.5.5"
-serde = { version = "1.0.139", features = ["derive"] }
+crossbeam-channel = "0.5.6"
+serde = { version = "1.0.140", features = ["derive"] }
 bincode = "1.3.3"
 regex = "1.6.0"
 chrono = "0.4.19"
