--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "rustyhack_server"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
 edition = "2021"
+homepage = "https://github.com/pbellchambers/rustyhack-mmo"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
 license = "AGPL-3.0"
+readme = "../README.md"
+description = "Server for Rustyhack MMO - An ASCII \"roguelike\" MMORPG"
+keywords = ["game", "games", "roguelike", "mmorpg", "ascii-art", "ascii-game", "console-game", "terminal-game", "terminal-based", "server"]
+categories = ["games"]
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,11 +19,11 @@ rustyhack_lib = { path = "../rustyhack_lib" }
 log = "0.4.17"
 simplelog = "0.12.0"
 console_engine = "2.4.0"
-crossterm = { version = "0.23.0", features = ["serde"] }
+crossterm = { version = "0.23.2", features = ["serde"] }
 legion = "0.4.0"
 laminar = "0.5.0"
-crossbeam-channel = "0.5.5"
-serde = { version = "1.0.139", features = ["derive"] }
+crossbeam-channel = "0.5.6"
+serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
 bincode = "1.3.3"
 rand = "0.8.5"
