--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -25,5 +25,6 @@ crossbeam-channel = "0.5.6"
 serde = { version = "1.0.141", features = ["derive"] }
 bincode = "1.3.3"
 regex = "1.6.0"
-chrono = "0.4.19"
+chrono = "0.4.20"
 itertools = "0.10.3"
+rayon = "1.5.3"
