--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -18,10 +18,9 @@ publish = false
 log = "0.4.17"
 simplelog = "0.12.0"
 serde = { version = "1.0.141", features = ["derive"] }
-console_engine = "2.4.0"
 crossterm = { version = "0.23.2", features = ["serde"] }
 laminar = "0.5.0"
 crossbeam-channel = "0.5.6"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
-strum = "0.24.1"
 strum_macros = "0.24.2"
+rayon = "1.5.3"
