--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -18,7 +18,6 @@ publish = false
 rustyhack_lib = { path = "../rustyhack_lib" }
 log = "0.4.17"
 simplelog = "0.12.0"
-console_engine = "2.4.0"
 crossterm = { version = "0.23.2", features = ["serde"] }
 legion = "0.4.0"
 laminar = "0.5.0"
@@ -28,3 +27,4 @@ serde_json = "1.0.82"
 bincode = "1.3.3"
 rand = "0.8.5"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+rayon = "1.5.3"
