--- a/rustyhack_lib/Cargo.toml
+++ b/rustyhack_lib/Cargo.toml
@@ -24,3 +24,4 @@ crossbeam-channel = "0.5.6"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 strum_macros = "0.24.2"
 rayon = "1.5.3"
+ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
