--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -28,3 +28,4 @@ bincode = "1.3.3"
 rand = "0.8.5"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 rayon = "1.5.3"
+ndarray = { version = "0.15.6", features = ["rayon"] }
