--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -26,5 +26,5 @@ serde = { version = "1.0.142", features = ["derive"] }
 bincode = "1.3.3"
 regex = "1.6.0"
 chrono = "0.4.20"
-itertools = "0.10.3"
 rayon = "1.5.3"
+message-io = { version = "0.14.6", default-features = false, features = ["tcp"] }
