--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,28 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  build_fmt_clippy:
+    name: Fmt & Clippy Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Rust (rustup)
+        run: |
+          rustup update stable --no-self-update
+          rustup default stable
+          rustup component add rustfmt
+          rustup component add clippy
+      - name: Build
+        run: cargo build --verbose
+      - name: Format Check
+        run: |
+          cargo fmt --version
+          cargo fmt -- --check --verbose
+      - name: Clippy Check
+        run: |
+          cargo clippy --version
+          cargo clippy -- --verbose -D warnings
+
   build_ubuntu:
     name: Ubuntu Build
     runs-on: ubuntu-latest
@@ -19,18 +41,6 @@ jobs:
       run: |
         rustup update stable --no-self-update
         rustup default stable
-        rustup component add rustfmt
-        rustup component add clippy
-    - name: Build
-      run: cargo build --verbose
-    - name: Format Check
-      run: |
-        cargo fmt --version
-        cargo fmt -- --check --verbose
-    - name: Lint Check
-      run: |
-        cargo clippy --version
-        cargo clippy -- --verbose -D warnings
     - name: Test
       run: cargo test --verbose
     - name: Build Release
